--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
   "author": "",
   "license": "BSD",
   "dependencies": {
-    "connect-multiparty": "^2.0.0",
     "MD5": "~1.3.0",
     "async": "~2.0.0-rc.3",
     "body-parser": "~1.15.0",
     "cli-table": "^0.3.1",
+    "connect-multiparty": "^2.0.0",
     "express": "*",
     "jsonwebtoken": "^7.1.6",
+    "multer": "^1.2.1",
+    "mysql": "~2.10.2",
     "node-gcm": "^0.11.0",
     "node-uuid": "1.4.6",
     "nodemailer": "^2.4.1",
-    "mysql": "~2.10.2",
     "request": "^2.72.0"
   }
 }
