--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-gcm": "^0.11.0",
     "node-uuid": "1.4.6",
     "nodemailer": "^2.4.1",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "unirest": "^0.5.1"
   }
 }
