--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-uuid": "1.4.6",
     "nodemailer": "^2.4.1",
     "request": "^2.72.0",
+    "underscore": "^1.8.3",
     "unirest": "^0.5.1"
   }
 }
