--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.15.0",
     "cli-table": "^0.3.1",
     "connect-multiparty": "^2.0.0",
+    "exif-parser": "^0.1.9",
     "express": "*",
     "jsonwebtoken": "^7.1.6",
     "multer": "^1.2.1",
